--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ numpy==1.17.4
 packaging==19.2
 pandas==0.25.3
 pluggy==0.13.1
+sphinx
 py==1.8.0
 pyparsing==2.4.5
 pytest==5.3.0
@@ -14,3 +15,4 @@ pytz==2019.3
 six==1.13.0
 wcwidth==0.1.7
 zipp==0.6.0
+
