--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,13 @@
-attrs==19.3.0
 Click==7.0
-importlib-metadata==0.23
-more-itertools==7.2.0
+ipykernel==5.1.3
+ipython==7.9.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jupyter==1.0.0
 numpy==1.17.4
-packaging==19.2
 pandas==0.25.3
-pluggy==0.13.1
-sphinx
-py==1.8.0
-pyparsing==2.4.5
-pytest==5.3.0
-python-dateutil==2.8.1
-pytz==2019.3
-six==1.13.0
-wcwidth==0.1.7
-zipp==0.6.0
-
+pyfiglet==0.8.post1
+scipy==1.3.1
+simplejson==3.13.2
+Sphinx==2.2.2
+virtualenv==16.7.7
