Tox : Add models tests

--- a/tox.ini
+++ b/tox.ini
@@ -12,5 +12,6 @@ commands =
     pytest data_science_framework/pytorch_utils/data_manager/test.py
     pytest data_science_framework/pytorch_utils/runner_utils/test.py
     pytest data_science_framework/pytorch_utils/layers/test.py
+    pytest data_science_framework/pytorch_utils/models/test.py
 
     pytest data_science_framework/scripting/test.py
