Model Checkpoint : Add to framework

--- a/tox.ini
+++ b/tox.ini
@@ -16,5 +16,6 @@ commands =
     pytest data_science_framework/pytorch_utils/losses/test.py
     pytest data_science_framework/pytorch_utils/optimizer/test.py
     pytest data_science_framework/pytorch_utils/trainer/test.py
+    pytest data_science_framework/pytorch_utils/callbacks/test.py
 
     pytest data_science_framework/scripting/test.py
