Plotter : Add to the framework

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ envlist = py36
 deps =
     -r requirements.txt
 commands =
+    pytest data_science_framework/data_analyser/plotter/test.py
+    pytest data_science_framework/data_analyser/tester/test.py
+
     pytest data_science_framework/data_augmentation/segmentation_augmentation/test.py
 
     pytest data_science_framework/data_spy/loggers/test.py
